--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,8 +40,4 @@ jobs:
       run: python -m build
 
     - name: Publish package to Test PyPI
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository-url: https://test.pypi.org/legacy/
+      run: TWINE_USERNAME=__token__ TWINE_PASSWORD=${{ secrets.TEST_PYPI_API_TOKEN }} twine upload --repository-url https://test.pypi.org/legacy/ dist/*
